src/css/mixins/thread-default.less
.thread-default {
    .lf-thread-root-content {
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
        box-shadow: none;
    }

    .lf-thread-replies {
        position: relative;
        z-index: 0;
        background: #FFF;

        .content {
            border: none;
            border-radius: 0;
            box-shadow: none;

            .content-source-logo {
                display: none;
            }
        }

        .content-body,
        .content .content-author-name {
            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
            font-size: 13px;
        }

        .hub-list-more,
        .hub-list-queue {
            box-shadow: none;

            &.hub-more-button-holding {
                .hub-more-notification:before {
                    color: #2C8EE0;
                }
            }
        }
    }

    &.lf-thread-leaf[data-thread-nest-level='0'] > .lf-thread-root-content {
        border-bottom-left-radius: 3px;
        border-bottom-right-radius: 3px;
        box-shadow: 0 1px 0 0 rgba(0,0,0,0.03);
        border: 1px solid #d2d2d2;
        border: 1px solid rgba(0,0,0,0.15);

        .content:first-child {
            border-left: 3px solid #d9d9d9;
        }
    }

    &[data-thread-nest-level='0'] > .lf-thread-replies {
        border-bottom-left-radius: 3px;
        border-bottom-right-radius: 3px;
        box-shadow: 0 1px 0 0 rgba(0,0,0,0.03);
        border: 1px solid #d2d2d2;
        border: 1px solid rgba(0,0,0,0.15);
        border-top: none;
    }

    .lf-thread-replies [data-thread-nest-level='1'] > .lf-thread-root-content {
        border-left: 3px solid #d9d9d9;
    }
}

